namespace Lab4.Infrastructure.Applicant.Enums;

public enum StudyForm
{
    StateFunded,
    Contract
}